
bin_SCRIPTS = gnome-specimen

EXTRA_DIST = \
	gnome-specimen.in

CLEANFILES = \
	gnome-specimen

appdir = $(pyexecdir)/specimen
app_PYTHON = \
	__init__.py \
	specimenwindow.py

#gnome-specimen: gnome-specimen.in Makefile
#	sed -e s!\@pyexecdir\@!@pyexecdir@! -e s!\@PYTHON\@!@PYTHON@! < $< > $@
#	chmod a+x $@

